<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.carfax.extensions.DoubleExtKt" />

        <variable
            name="viewModel"
            type="com.example.carfax.viewModels.DetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.DetailActivity">

        <ImageView
            android:id="@+id/detailImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:contentDescription="@null"
            app:layout_constraintBottom_toTopOf="@+id/detailModelMakeTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/detailModelMakeTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.car.year+` `+ viewModel.car.make+` `+viewModel.car.model}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailImage" />

        <TextView
            android:id="@+id/detailPriceTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:text="@{DoubleExtKt.formatPrice(viewModel.car.price)}"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detailMilageTxt" />

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/detailMilageTxt"
            app:layout_constraintStart_toEndOf="@+id/detailPriceTxt"
            app:layout_constraintTop_toBottomOf="@+id/detailModelMakeTxt" />

        <TextView
            android:id="@+id/detailMilageTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.car.mileage + ` mi`}"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/detailModelMakeTxt" />

        <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailPriceTxt" />

        <TextView
            android:id="@+id/vehicleInfoTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/vehicle_info"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/separator" />

        <LinearLayout
            android:id="@+id/detailLabelLinear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/detailInfoLinear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleInfoTxt">

            <TextView
                android:id="@+id/locationLabelTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="16sp"

                />

            <TextView
                android:id="@+id/exteriorColorLabelTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/exterior_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/interiorColorLabelTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/interior_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/driveTypeLabelTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/drive_type"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/transmissionLabelTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/transmission"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/bodyStyleLabelTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/body_style"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/engineLabelTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/engine"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/fuelLabelTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/fuel"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailInfoLinear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detailLabelLinear"
            app:layout_constraintTop_toTopOf="@+id/detailLabelLinear">

            <TextView
                android:id="@+id/locationTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.car.location}"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/exteriorColorTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.car.exteriorColor}"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/interiorColorTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.car.interiorColor}"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/driveTypeTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.car.driveType}"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/transmissionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.car.transmission}"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/bodyStyleTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.car.bodyStyle}"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/engineTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.car.engine}"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/fuelTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.car.fuel}"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/detailCallDealerBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/call_dealer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailInfoLinear" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>